[project]
name = "py-random"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "cvlib>=0.2.7",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "setuptools>=80.9.0",
    "streamlit>=1.48.0",
    "torchvision>=0.23.0",
]
